api-gateway-k8s/api-gateway-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: api-gateway-ratelimit
  namespace: default
spec:
  rateLimit:
    average: 20  
    burst: 60
