api-gateway-k8s/api-gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deploy
  namespace: default
  labels:
    app: api-gateway
spec:
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway-container
          image: carlosalves77/api-gateway:0.1.2
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
