api-gateway-k8s/api-gateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
